# SDKELI_LIDAR_LS2027

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/sdkeli_ls_udp/include/sdkeli_ls_udp/: sdkeli_ls1207de_parser.h  sdkeli_ls_common_udp.h  sdkeli_ls_constants.h
install/sdkeli_ls_udp/lib/sdkeli_ls_udp/: sdkeli_ls1207de
install/sdkeli_ls_udp/share/ament_index/resource_index/package_run_dependencies/: sdkeli_ls_udp
install/sdkeli_ls_udp/share/ament_index/resource_index/parent_prefix_path/: sdkeli_ls_udp
install/sdkeli_ls_udp/share/sdkeli_ls_udp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.zsh
install/sdkeli_ls_udp/share/sdkeli_ls_udp/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  sdkeli_ls_udpConfig-version.cmake  sdkeli_ls_udpConfig.cmake
install/sdkeli_ls_udp/share/sdkeli_ls_udp/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
log/: latest_build
sdkeli_gitee/: CMakeLists.txt  package.xml
sdkeli_gitee/include/sdkeli_ls_udp/: parser_base.h  sdkeli_ls1207de_parser.h  sdkeli_ls_common.h  sdkeli_ls_common_udp.h  sdkeli_ls_config.h  sdkeli_ls_constants.h  sdkeli_ls_sensor_frame.h
sdkeli_gitee/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
sdkeli_gitee/install/sdkeli_ls_udp/include/sdkeli_ls_udp/: parser_base.h  sdkeli_ls_common.h  sdkeli_ls_config.h  sdkeli_ls_sensor_frame.h
sdkeli_gitee/install/sdkeli_ls_udp/lib/sdkeli_ls_udp/: sdkeli_ls1207de
sdkeli_gitee/install/sdkeli_ls_udp/share/ament_index/resource_index/package_run_dependencies/: sdkeli_ls_udp
sdkeli_gitee/install/sdkeli_ls_udp/share/ament_index/resource_index/parent_prefix_path/: sdkeli_ls_udp
sdkeli_gitee/install/sdkeli_ls_udp/share/sdkeli_ls_udp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
sdkeli_gitee/install/sdkeli_ls_udp/share/sdkeli_ls_udp/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  sdkeli_ls_udpConfig-version.cmake  sdkeli_ls_udpConfig.cmake
sdkeli_gitee/install/sdkeli_ls_udp/share/sdkeli_ls_udp/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
sdkeli_gitee/log/: latest_build
sdkeli_gitee/src/: sdkeli_ls1207de.cpp  sdkeli_ls1207de_parser.cpp  sdkeli_ls_common.cpp  sdkeli_ls_common_udp.cpp  sdkeli_ls_sensor_frame.cpp
